feat(api): migrar a API REST; corregir NonUniqueResultException en historias clínicas; fix StaleObjectState en facturas; ajustar RtsmApplication para modo web; actualizar mappers y adapters para INSERT/UPDATE correcto